--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.4",
     "@heroicons/vue": "^2.1.3",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
