--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^2.13.4",
     "@heroicons/vue": "^2.1.3",
-    "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "postcss": "^8.4.38",
-    "postcss-loader": "^8.1.1"
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.15"
   }
 }
