--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
     "@nuxtjs/strapi": "2.0.0",
+    "@strapi/strapi": "^5.4.2",
     "nuxt": "^3.11.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
