--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.2"
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1"
   }
 }
