--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.4",
+    "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/strapi": "2.0.0",
     "@strapi/strapi": "^5.4.2",
     "nuxt": "^3.14.1592",
