--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.4",
+    "@nuxt/image": "^1.8.1",
     "@nuxthq/studio": "^2.2.1",
+    "@nuxtjs/i18n": "^9.1.0",
     "@nuxtjs/strapi": "2.0.0",
     "@strapi/strapi": "^5.4.2",
+    "@vueuse/motion": "^2.2.6",
+    "clsx": "^2.1.1",
     "nuxt": "^3.14.1592",
+    "tailwind-merge": "^2.5.5",
     "vue": "latest",
     "vue-router": "latest"
   },
