--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -47,6 +47,8 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         if: ${{ steps.pkgman.outputs.package_manager == 'pnpm' }}
+        with:
+          version: 9
         name: Install pnpm
         id: pnpm-install
 
@@ -68,7 +70,7 @@ jobs:
         run: npx nuxi build --preset github_pages
         env:
           NUXT_PUBLIC_STUDIO_API_URL: https://api.nuxt.studio
-          
+
 
       # Deployment job
       - name: Deploy 🚀
