--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@nuxtjs/strapi": "2.0.0",
     "@strapi/strapi": "^5.4.2",
     "@vueuse/motion": "^2.2.6",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.462.0",
     "nuxt": "^3.14.1592",
+    "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "latest",
     "vue-router": "latest"
   },
