--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.462.0",
     "nuxt": "^3.14.1592",
+    "nuxt-svgo": "^4.0.9",
     "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
