--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/i18n": "^9.1.0",
     "@nuxtjs/strapi": "2.0.0",
     "@strapi/strapi": "^5.4.2",
+    "@vee-validate/zod": "^4.14.7",
+    "@vueuse/core": "^12.0.0",
     "@vueuse/motion": "^2.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,12 +27,15 @@
     "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.14.7",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.7.0",
     "postcss": "^8.4.49",
-    "postcss-loader": "^8.1.1"
+    "postcss-loader": "^8.1.1",
+    "shadcn-nuxt": "^0.10.4"
   }
 }
