--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@linear/sdk": "^35.0.0",
     "@nuxt/content": "^2.13.4",
     "@nuxt/image": "^1.8.1",
+    "@nuxt/scripts": "^0.9.5",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/i18n": "^9.1.0",
     "@vee-validate/zod": "^4.14.7",
